# aion-story-engine

./: .coverage  .gitignore  AION-Skill-Creation-Complete.md  AION-Skill-Test-Report.md  Makefile  PROJECT_STATUS.md  README.md  gemini对设计方案反馈.txt  pyproject.toml  pytest.ini  start_api.py  test_api.py  test_client.js
.claude/: settings.local.json
.claude/skills/: aion-story-engine.skill
agents/: isaac-wein-agent.md
aion_engine/: digital_twin.py  engine.py  nodes.py  session.py
aion_engine/api/: __init__.py  fastapi_app.py  main.py
aion_engine/assets/: __init__.py  asset.py  asset_types.py  manager.py  precipitation.py
aion_engine/cli/: __init__.py  main.py
aion_engine/collaboration/: __init__.py  consensus.py  manager.py
aion_engine/core/: abstraction.py  blackboard.py  cognition.py  narrative.py  physics.py
aion_engine/economy/: __init__.py  marketplace.py
aion_engine/governance/: __init__.py  dao.py
aion_engine/intent/: __init__.py  engine.py
aion_engine/medici/: __init__.py  synapse.py
docs/: quickstart.md
frontend/: README.md  next.config.js  package.json  package.json.example  tailwind.config.js
tests/: README.md  conftest.py  test_abstraction.py  test_api_integration.py  test_assets.py  test_blackboard.py  test_cognition.py  test_collaboration.py  test_dao_governance.py  test_engine.py  test_enhanced_profile.py  test_intent_engine.py  test_multiverse.py  test_narrative.py  test_nodes.py  test_phase2_assets.py  test_phase3_digital_twin.py  test_physics.py  test_realtime.py  test_realtime_integration.py  test_session.py
(+138 files in other folders)
