[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aion-engine"
version = "0.1.0"
description = "AI-powered story engine with world model simulation"
authors = [
    {name = "Claude Code", email = "claude@anthropic.com"}
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=aion_engine --cov-report=term-missing"
